# fastApi-hotels

./: db.sqlite3  main.py  pyproject.toml
fast_api/: main.py  pyproject.toml
fast_api/src/: database.py
rent/: admin.py  api.py  models.py  serializers.py  urls.py  views.py
rent/migrations/: 0001_initial.py
rent/rentapp_renatapp_rent123/migrations/: 0001_initial.py  0002_alter_renter_emailrenter_alter_seller_emailseller.py  0003_apartmentslist_citylist_streettype.py
rent_front/: package-lock.json  package.json
rent_front/src/: App.js  index.js
rent_front/src/Components/InfoPanel/: InfoPanel.jsx  InfoPanel.module.css
rent_front/src/Components/Menu/: Menu.jsx  Menu.module.css
rent_front/src/Components/Menu/Pages/: About.jsx  Contacts.jsx  Home.jsx  Home.module.css  LogInSignIn.jsx  LogInSignIn.module.css  MyRealEstate.jsx  MyRealEstate.module.css
rent_front/src/Components/MyRealEstateDetails/: MyRealEstateDetails.jsx  MyRealEstateDetails.module.css
rent_front/src/Components/MyRealEstateList/: MyRealEstateList.jsx  MyRealEstateList.module.css
rent_front/src/Components/SearchField/: SearchField.jsx  SearchField.module.css
rentapp/: asgi.py  settings.py  urls.py  wsgi.py
