[tool.poetry]
name = "fast"
version = "0.1.0"
description = ""
authors = ["pasha <17pasha07@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
databases = "^0.9.0"
pydantic = "^2.8.2"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
