[tool.poetry]
name = "fast"
version = "0.1.0"
description = ""
authors = ["pasha <17pasha07@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
databases = {extras = ["aiosqlite"], version = "^0.9.0"}
pydantic = "^2.8.2"
fastapi = "^0.111.0"
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
